Setup and routed all views in index.php

--- a/styles/style.css
+++ b/styles/style.css
@@ -26,6 +26,13 @@ body{
 .blue:hover{
     background: white;
 }
+.grey{
+    background: #4e555b;
+}
+.grey:hover{
+    background: #4e555b;
+}
+
 .btn{
     color: white;
     margin: auto;
