--- a/views/learn.html
+++ b/views/learn.html
@@ -37,25 +37,14 @@ Version 1.0
         </div><!-- container -->
     </nav>
 
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block w-100 h-25" src="images/kids.jpg" alt="First slide">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100 h-25" src="images/kids.jpg" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100 h-25" src="images/kids.jpg" alt="Third slide">
-            </div>
-        </div>
-    </div>
 
     <!-- Button -->
     <div>
-        <a href="learn" class="button links"><p class="blue">Learn Shapes!</p></a>
-        <a href="learn" class="button links"><p class="pink">Learn Numbers!</p></a>
-        <a href="learn" class="button links"><p class="blue">Learn Animals!</p></a>
+        <a href="shapes" class="button links"><p class="blue">Learn Shapes!</p></a>
+        <a href="numbers" class="button links"><p class="pink">Learn Numbers!</p></a>
+        <a href="animals" class="button links"><p class="blue">Learn Animals!</p></a>
+        <a href="alphabet" class="button links "><p class="grey">Learn the Alphabet!</p></a>
+        <a href="fruits" class="button links "><p class="grey">Learn Fruits!</p></a>
     </div>
 
 
