--- a/views/numbers.html
+++ b/views/numbers.html
@@ -1,9 +1,5 @@
-<!--
-Blezyl Santos and Sarah Mehri
-Kids Learn Website
-Version 1.0
--->
 <!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -37,25 +33,16 @@ Version 1.0
         </div><!-- container -->
     </nav>
 
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block w-100 h-25" src="images/kids.jpg" alt="First slide">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100 h-25" src="images/kids.jpg" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100 h-25" src="images/kids.jpg" alt="Third slide">
-            </div>
-        </div>
+
+    <div id="numbers">
+
     </div>
 
-    <!-- Button -->
+    <div id="answer">
+
+    </div>
     <div>
-        <a href="learn" class="button links"><p class="blue">Learn Shapes!</p></a>
-        <a href="learn" class="button links"><p class="pink">Learn Numbers!</p></a>
-        <a href="learn" class="button links"><p class="blue">Learn Animals!</p></a>
+        <a href="learn" class="button links"><p class="blue">Next</p></a>
     </div>
 
 
