--- a/views/signIn.html
+++ b/views/signIn.html
@@ -1,9 +1,5 @@
-<!--
-Blezyl Santos and Sarah Mehri
-Kids Learn Website
-Version 1.0
--->
 <!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -37,29 +33,21 @@ Version 1.0
         </div><!-- container -->
     </nav>
 
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block w-100 h-25" src="images/kids.jpg" alt="First slide">
+
+    <div class="mx-auto mt-5 p-5 grey w-50">
+        <form action="">
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" class="form-control" name="username" id="username" aria-describedby="username" placeholder="Enter Username">
             </div>
-            <div class="carousel-item">
-                <img class="d-block w-100 h-25" src="images/kids.jpg" alt="Second slide">
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" id="password" name="password" placeholder="Password">
             </div>
-            <div class="carousel-item">
-                <img class="d-block w-100 h-25" src="images/kids.jpg" alt="Third slide">
-            </div>
-        </div>
+            <a href="signUp" class="btn blue">Sign Up</a>
+            <button type="submit" class="btn blue">Sign In!</button>
+        </form>
     </div>
-
-    <!-- Button -->
-    <div>
-        <a href="learn" class="button links"><p class="blue">Learn Shapes!</p></a>
-        <a href="learn" class="button links"><p class="pink">Learn Numbers!</p></a>
-        <a href="learn" class="button links"><p class="blue">Learn Animals!</p></a>
-    </div>
-
-
-
 </div>
 
 <div>
