--- a/views/signUp.html
+++ b/views/signUp.html
@@ -1,9 +1,5 @@
-<!--
-Blezyl Santos and Sarah Mehri
-Kids Learn Website
-Version 1.0
--->
 <!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -37,27 +33,39 @@ Version 1.0
         </div><!-- container -->
     </nav>
 
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block w-100 h-25" src="images/kids.jpg" alt="First slide">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100 h-25" src="images/kids.jpg" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100 h-25" src="images/kids.jpg" alt="Third slide">
-            </div>
-        </div>
-    </div>
 
-    <!-- Button -->
-    <div>
-        <a href="learn" class="button links"><p class="blue">Learn Shapes!</p></a>
-        <a href="learn" class="button links"><p class="pink">Learn Numbers!</p></a>
-        <a href="learn" class="button links"><p class="blue">Learn Animals!</p></a>
-    </div>
+    <div class="mx-auto mt-5 p-5 grey w-50">
+        <h1>Sign Up!</h1>
+        <hr>
+        <form action="">
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" class="form-control" name="username" id="username" aria-describedby="username" placeholder="Enter Username">
+            </div>
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" class="form-control" name="name" id="name" aria-describedby="name" placeholder="Enter Name">
+            </div>
 
+            <div class="form-group">
+                <label for="username">Age</label>
+                <input type="text" class="form-control" name="age" id="age" aria-describedby="age" placeholder="Enter Age">
+            </div>
+            <div class="form-group">
+                <label for="grade">Grade</label>
+                <input type="text" class="form-control" name="grade" id="grade" aria-describedby="grade" placeholder="Enter Grade">
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+            </div>
+            <div class="form-group">
+                <label for="cpassword">Confirm Password</label>
+                <input type="password" class="form-control" id="cpassword" name="cpassword" placeholder="Confrim Password">
+            </div>
+            <button type="submit" class="btn blue">Sign Up!</button>
+        </form>
+    </div>
 
 
 </div>
