--- a/views/signUp.html
+++ b/views/signUp.html
@@ -34,7 +34,7 @@
     </nav>
 
 
-    <div class="mx-auto mt-5 p-5 grey w-50">
+    <div class="mx-auto mt-5 p-5 grey w-50 w-sm-100">
         <h1>Sign Up!</h1>
         <hr>
         <form action="">
