--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 body{
     background-image: url('../images/bg.png');
     background-size: 100%;
-    color: white !important;
+    color: black !important;
     font-family: 'Ubuntu', sans-serif;
     font-size: large;
 }
@@ -27,10 +27,14 @@ body{
     background: white;
 }
 .grey{
-    background: #4e555b;
+    background: darkgrey;
 }
-.grey:hover{
-    background: #4e555b;
+
+.gold{
+    background: gold;
+}
+.gold:hover{
+    background: gold;
 }
 
 .btn{
@@ -56,4 +60,8 @@ body{
 }
 a{
     color: white;
+}
+
+.row{
+    color:black;
 }
