--- a/views/fruits.html
+++ b/views/fruits.html
@@ -15,9 +15,9 @@
     <nav class="navbar navbar-expand-sm" >
         <div class="container">
             <!-- logo -->
-            <a href="/" class="navbar-brand text-white" id="logo"><strong>Kids Learn</strong></a>
+            <a href="{{@BASE}}" class="navbar-brand text-white" id="logo"><strong>Kids Learn</strong></a>
             <!-- Menu Bar -->
-            <button class="navbar-toggler" type="button"
+            <button class="navbar-toggler navbar-dark" type="button"
                     data-toggle="collapse" data-target="#myTogglerNav"
                     aria-controls="myTogglerNav"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -34,15 +34,22 @@
     </nav>
 
 
-    <div id="fruits">
-
+    <div class="container">
+        <!-- Use Repeat tag and get info from database-->
+        <div class="row">
+            <div class="col-3  col-sm-5 ">
+                <img src="" alt="">
+            </div>
+            <div class="col-9 col-sm-7">
+                <h2>Name of Fruit</h2>
+                <h2>Origin</h2>
+                <h2>Description:</h2>
+            </div>
+        </div>
     </div>
 
-    <div id="answer">
-
-    </div>
     <div>
-        <a href="learn" class="button links"><p class="blue">Next</p></a>
+        <a href="{{ @BASE }}" class="button links"><p class="blue">Go Home</p></a>
     </div>
 </div>
 
