--- a/views/signIn.html
+++ b/views/signIn.html
@@ -34,7 +34,7 @@
     </nav>
 
 
-    <div class="mx-auto mt-5 p-5 grey w-50">
+    <div class="mx-auto mt-5 p-5 grey w-50 w-sm-100">
         <form action="">
             <div class="form-group">
                 <label for="username">Username</label>
