--- a/views/create.html
+++ b/views/create.html
@@ -9,7 +9,7 @@
     <title>Kid's Learn!!</title>
 
 </head>
-<body>
+<body onload="init()">
 <div class="container text-white">
     <!-- Navigation bar -->
     <nav class="navbar navbar-expand-sm" >
@@ -45,38 +45,55 @@
             </div>
         </div><!-- container -->
     </nav>
+    <div class="container gold"><h1>Create </h1></div>
 
+    <div class="container grey p-5">
 
-    <div class="container">
-        <!-- Use Repeat tag and get info from database-->
+        <h2>Draw a Shape, Animal, or Fruits</h2>
         <div class="row">
-            <div class="col-3  col-sm-5 ">
-                <img src="" alt="">
+            <canvas id="can" class="m-2"></canvas>
+
+            <div class="col text-center d-inline-block">
+                <div>Choose Color</div>
+                <div class="row px-5 justify-content-center">
+                    <div class="color" id="green" onclick="color(this)"></div>
+                    <div class="color" id="blue" onclick="color(this)"></div>
+                    <div class="color" id="red" onclick="color(this)"></div>
+                </div>
+                <div class="row px-5 justify-content-center">
+                    <div class="color" id="yellow" onclick="color(this)"></div>
+                    <div class="color" id="orange" onclick="color(this)"></div>
+                    <div class="color" id="black" onclick="color(this)"></div>
+                </div>
+                <div>Eraser</div>
+                <div class="row px-5 py-1 justify-content-center">
+                    <div class="color" id="white" onclick="color(this)"></div>
+                </div>
+                <button class="btn btn-secondary" id="btn" onclick="save()">Save</button>
+                <button class="btn btn-secondary" id="clr" onclick="erase()">Clear</button>
             </div>
-            <div class="col-9 col-sm-7">
-                <h2>Name of Animal</h2>
-                <h2>Description:</h2>
-            </div>
+            <form action="">
+
+                <div class="col justify-content-center p-0 m-2">
+
+                    <img id="canvasimg" style="display:none;">
+
+                </div>
+            </form>
+
         </div>
-    </div>
-
-    <div>
-        <a href="{{ @BASE }}" class="button links"><p class="blue">Go Home</p></a>
+        <br>
+        <div class="d-inline-block "><button class="btn btn-success justify-content-end">Next</button></div>
+        <a href="createType">NEXT</a>
     </div>
 
 
 
 </div>
-<br><br>
-<div class="justify-content-center align-self-center text-center d-flex">
-    <br>
-    <h6>@Sezyl</h6>
-</div>
-<br>
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="scripts/canvas.js"></script>
 
 </body>
 </html>
