--- a/views/create1.html
+++ b/views/create1.html
@@ -45,38 +45,53 @@
             </div>
         </div><!-- container -->
     </nav>
-
-
-    <div class="container">
-        <!-- Use Repeat tag and get info from database-->
-        <div class="row">
-            <div class="col-3  col-sm-5 ">
-                <img src="" alt="">
+    <div class="container gold"><h1>Create </h1></div>
+    <div class="container grey p-5">
+        <div class="row p-5">
+            <div class="col-6">
+                <h5>What did you draw?</h5>
+                <repeat group="{{ @types }}" value="{{ @type }}">
+                    <div class="form-check mr-3">
+                        <label class="form-check-label" for="{{@type}}">
+                            <input class="form-check-input" type="radio" name="type" id="{{@type}}" value="{{@type}}">
+                            {{@type}}
+                        </label>
+                    </div>
+                </repeat>
             </div>
-            <div class="col-9 col-sm-7">
-                <h2>Name of Animal</h2>
-                <h2>Description:</h2>
+            <div class="col-6">
+                <div class="form-group">
+                    <label for="fname">Name: </label>
+                    <input type="text" class="form-control" name="fname" id="fname" aria-describedby="fname" placeholder="Enter First name" value="{{ @fname }}">
+                    <span class="text-danger"><check if="{{ isset(@errors['fname']) }}">
+                            {{ @errors['fname'] }}
+                        </check></span>
+
+                </div>
+                <div class="form-group">
+                    <label for="desc">Description:</label>
+                    <textarea class="form-control" name="desc" id="desc" rows="3" >{{ @desc }}</textarea>
+                </div>
             </div>
         </div>
-    </div>
+        <div class="row">
+            <div class="col-9">
+            </div>
+            <div class="col-3 align-self-end">
+                <button class="form-control btn btn-danger" type="submit" value="Next">Next ></button>
+            </div>
+        </div>
 
-    <div>
-        <a href="{{ @BASE }}" class="button links"><p class="blue">Go Home</p></a>
+        <a href="createFinish">NEXT</a>
     </div>
 
 
 
 </div>
-<br><br>
-<div class="justify-content-center align-self-center text-center d-flex">
-    <br>
-    <h6>@Sezyl</h6>
-</div>
-<br>
-
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+<script src="scripts/canvas.js"></script>
 
 </body>
 </html>
