--- a/views/home.html
+++ b/views/home.html
@@ -27,13 +27,26 @@ Version 1.0
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="myTogglerNav">
-                <div class="navbar-nav ml-auto">
-                    <a class="nav-item nav-link text-white" href="{{@BASE}}">Home</a>
-                    <a class="nav-item nav-link text-white" href="learn">Learn</a>
-                    <a class="nav-item nav-link text-white" href="signIn">Sign In</a>
-                </div><!-- navbar -->
-            </div><!-- collapse -->
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{{@BASE}}">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="{{@BASE}}" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Learn!
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="shapes">Learn Shapes</a>
+                            <a class="dropdown-item" href="animals">Learn Animals</a>
+                            <a class="dropdown-item" href="fruits">Learn Fruits</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="signIn">Sign In</a>
+                    </li>
+                </ul>
+            </div>
         </div><!-- container -->
     </nav>
 
@@ -56,16 +69,19 @@ Version 1.0
         <a href="shapes" class="button links"><p class="blue">Learn Shapes!</p></a>
         <a href="fruits" class="button links"><p class="pink">Learn Fruits!</p></a>
         <a href="animals" class="button links"><p class="blue">Learn Animals!</p></a>
-        <a href="{{@BASE}}" class="button links"><p class="gold">Create Something!</p></a>
+        <a href="create" class="button links"><p class="gold">Create Something!</p></a>
     </div>
 
 
 
 </div>
 
-<div>
-    @Sezyl
+<br><br>
+<div class="justify-content-center align-self-center text-center d-flex">
+    <br>
+    <h6>@Sezyl</h6>
 </div>
+<br>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
