--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 body{
-    background-image: url('../images/bg.png');
+    /*background-image: url('../images/bg.jpg');*/
+
     background-size: 100%;
     color: black !important;
     font-family: 'Ubuntu', sans-serif;
@@ -29,11 +30,7 @@ body{
 .grey{
     background: darkgrey;
 }
-
 .gold{
-    background: gold;
-}
-.gold:hover{
     background: gold;
 }
 .color{
@@ -65,27 +62,18 @@ body{
 #can{
     background: white;
     border: 1px black solid;
+    width:300px;
+    height:150px;
+}
+#end{
+    bottom:0
 }
 .btn{
     color: white;
     margin: auto;
 }
-
-.links p{
-    border: 2px solid black;
-    padding: 40px;
-    border-radius: 25px;
-    width: 70%;
-    text-align: center;
-    margin: 20px auto;
-    height: 100%;
-}
-.links {
-    text-decoration: none;
-}
-.links:hover{
-    color: black;
-    text-decoration:none;
+a.d-flex{
+    font-size: xx-large;
 }
 a{
     color: white;
