--- a/views/create1.html
+++ b/views/create1.html
@@ -45,9 +45,12 @@
             </div>
         </div><!-- container -->
     </nav>
-    <div class="container gold"><h1>Create </h1></div>
+    <div class="container gold p-3"><h1>Create </h1></div>
     <div class="container grey p-5">
-        <div class="row p-5">
+        <h2 class="p-3 text-center">Name It</h2>
+        <hr>
+        <form action="#" method="post">
+        <div class="row px-5 pt-2">
             <div class="col-6">
                 <h5>What did you draw?</h5>
                 <repeat group="{{ @types }}" value="{{ @type }}">
@@ -58,19 +61,22 @@
                         </label>
                     </div>
                 </repeat>
+                <span class="text-danger"><check if="{{ isset(@errors['type']) }}">
+                            {{ @errors['type'] }}
+                        </check></span>
             </div>
             <div class="col-6">
                 <div class="form-group">
-                    <label for="fname">Name: </label>
-                    <input type="text" class="form-control" name="fname" id="fname" aria-describedby="fname" placeholder="Enter First name" value="{{ @fname }}">
-                    <span class="text-danger"><check if="{{ isset(@errors['fname']) }}">
-                            {{ @errors['fname'] }}
+                    <label for="oname">Name: </label>
+                    <input type="text" class="form-control" name="oname" id="oname" aria-describedby="fname" placeholder="Enter Name" value="{{ @oname }}">
+                    <span class="text-danger"><check if="{{ isset(@errors['oname']) }}">
+                            {{ @errors['oname'] }}
                         </check></span>
 
                 </div>
                 <div class="form-group">
                     <label for="desc">Description:</label>
-                    <textarea class="form-control" name="desc" id="desc" rows="3" >{{ @desc }}</textarea>
+                    <textarea class="form-control" name="desc" id="desc" rows="3" placeholder="Enter Description">{{ @desc }}</textarea>
                 </div>
             </div>
         </div>
@@ -81,8 +87,7 @@
                 <button class="form-control btn btn-danger" type="submit" value="Next">Next ></button>
             </div>
         </div>
-
-        <a href="createFinish">NEXT</a>
+        </form>
     </div>
 
 
