--- a/views/fruits.html
+++ b/views/fruits.html
@@ -46,26 +46,27 @@
             </div>
         </div><!-- container -->
     </nav>
+    <div class="container p-3 bg-danger"><h1>Learn about Fruits! </h1></div>
+    <div class="container p-4">
+        <div class="container" id="showFruits">
+            <!-- Use Repeat tag and get info from database-->
 
+            <div class="row" >
+                <div class="col-4  col-sm-5 ">
+                    <div id="target"></div>
+                </div>
+                <div class="col-8 col-sm-7">
 
-    <div class="container" id="showFruits">
-        <!-- Use Repeat tag and get info from database-->
-        <div class="row" >
-            <div class="col-4  col-sm-5 ">
-                <div id="target"></div>
-            </div>
-            <div class="col-8 col-sm-7">
+                    <span id="result"></span>
 
-                   <span id="result"></span>
-
+                </div>
             </div>
         </div>
     </div>
-<!--
-    <div>
-        <a href="{{ @BASE }}" class="button links"><p class="blue">Go Home</p></a>
+
+    <div class="d-flex justify-content-center m-2 p-2 mx-auto">
+        <a href="{{@BASE}}" class="d-inline btn blue btn-large w-25 p-2 mx-auto ">Go Back Home</a>
     </div>
-    -->
 </div>
 <br><br>
 <div class="justify-content-center align-self-center text-center d-flex">
