--- a/views/home.html
+++ b/views/home.html
@@ -19,7 +19,7 @@ Version 1.0
     <nav class="navbar navbar-expand-sm" >
         <div class="container">
             <!-- logo -->
-            <a href="{{ @BASE }}" class="navbar-brand text-white" id="logo"><strong>Kids Learn</strong></a>
+            <a href="{{ @BASE }}" class="navbar-brand text-white" id="logo">Kids Learn</a>
             <!-- Menu Bar -->
             <button class="navbar-toggler navbar-dark" type="button"
                     data-toggle="collapse" data-target="#myTogglerNav"
@@ -50,26 +50,43 @@ Version 1.0
         </div><!-- container -->
     </nav>
 
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100 h-25" src="images/kids.jpg" alt="First slide">
+                <img class="d-block w-100 h-25" src="images/pic3.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100 h-25" src="images/kids.jpg" alt="Second slide">
+                <img class="d-block w-100 h-25" src="images/pic2.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100 h-25" src="images/kids.jpg" alt="Third slide">
+                <img class="d-block w-100 h-25" src="images/pic1.png" alt="Third slide">
             </div>
         </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
 
+    <div class="container text-dark m-3">
+        <h3>About Kids Learn</h3>
+        <hr>
+        <p>A website that helps kids learn basics such as shapes, animals, and fruits. Depending on the subject that the
+            user will pick it will show information about some of the items. They are also able to create objects by
+            drawing or uploading a picture. If the user signs up/in they have the ability to see all the creations they
+            have made. </p>
+    </div>
     <!-- Button -->
-    <div>
-        <a href="shapes" class="button links"><p class="blue">Learn Shapes!</p></a>
-        <a href="fruits" class="button links"><p class="pink">Learn Fruits!</p></a>
-        <a href="animals" class="button links"><p class="blue">Learn Animals!</p></a>
-        <a href="create" class="button links"><p class="gold">Create Something!</p></a>
+    <div class="container ">
+
+        <a href="shapes" class=" d-flex btn pink btn-large w-75 p-5 m-5 mx-auto justify-content-center">Learn Shapes</a>
+        <a href="fruits" class="d-flex btn blue btn-large w-75 p-5 m-5 mx-auto justify-content-center">Learn Fruits</a>
+        <a href="animals" class="d-flex btn pink btn-large w-75 p-5 m-5 mx-auto justify-content-center">Learn Animals</a>
+        <a href="create" class="d-flex gold btn w-75 btn-large p-5 m-5 mx-auto justify-content-center">Create an Object!</a>
     </div>
 
 
@@ -77,7 +94,7 @@ Version 1.0
 </div>
 
 <br><br>
-<div class="justify-content-center align-self-center text-center d-flex">
+<div class="footer justify-content-center align-self-center text-center d-flex p-2">
     <br>
     <h6>@Sezyl</h6>
 </div>
