--- a/views/shapes.html
+++ b/views/shapes.html
@@ -45,23 +45,25 @@
             </div>
         </div><!-- container -->
     </nav>
+    <div class="container bg-warning p-3"><h1>Learn about Shapes! </h1></div>
+    <div class="container p-4">
+        <div class="container" id="showShapes">
+            <!-- Use Repeat tag and get info from database-->
+            <div class="row" >
+                <div class="col-4  col-sm-5 ">
+                    <div id="target"></div>
+                </div>
+                <div class="col-8 col-sm-7">
 
+                    <span id="result"></span>
 
-    <div class="container" id="showShapes">
-        <!-- Use Repeat tag and get info from database-->
-        <div class="row" >
-            <div class="col-4  col-sm-5 ">
-                <div id="target"></div>
-            </div>
-            <div class="col-8 col-sm-7">
-
-                <span id="result"></span>
-
+                </div>
             </div>
         </div>
     </div>
-    <div>
-        <a href="{{ @BASE }}" class="button links"><p class="blue">Go Home</p></a>
+
+    <div class="d-flex justify-content-center m-2 p-2 mx-auto">
+        <a href="{{@BASE}}" class="d-inline btn blue btn-large w-25 p-2 mx-auto ">Go Back Home</a>
     </div>
 
 
