--- a/views/create.html
+++ b/views/create.html
@@ -86,7 +86,7 @@
             <form action="#" method="post" enctype="multipart/form-data">
 
                 <br>
-                <h5>Upload your Profile Picture!</h5>
+                <h5>Upload your Drawing/Picture!</h5>
                 <div class="row m-3">
                     <input type="file" name="fileToUpload" id="fileToUpload">
                     <br>
