Fixed insertMember and added premium account checkbox

--- a/views/signUp.html
+++ b/views/signUp.html
@@ -100,6 +100,13 @@
                             {{ @errors['cpassword'] }}
                         </check></span>
             </div>
+            <fieldset class="form-group">
+                <legend class="col-form-label">Premium Membership</legend>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" id="premium" name="premium">
+                    <label class="form-check-label" for="premium"> Sign me up for a Premium Account</label>
+                </div>
+            </fieldset>
             <button type="submit" class="btn blue">Sign Up!</button>
         </form>
     </div>
