Able to sign in and created user page. Creation table has user_id now.

--- a/views/home.html
+++ b/views/home.html
@@ -16,8 +16,9 @@ Version 1.0
 <body>
 <div class="container text-white">
     <!-- Navigation bar -->
-    <nav class="navbar navbar-expand-sm" >
-        <div class="container">
+    <include href="views/navbar.html"></include>
+
+    <div class="container">
             <!-- logo -->
             <a href="{{ @BASE }}" class="navbar-brand text-white" id="logo">Kids Learn</a>
             <!-- Menu Bar -->
