--- a/views/createFinish.html
+++ b/views/createFinish.html
@@ -12,61 +12,29 @@
 <body>
 <div class="container text-white">
     <!-- Navigation bar -->
-    <nav class="navbar navbar-expand-sm" >
-        <div class="container">
-            <!-- logo -->
-            <a href="{{ @BASE }}" class="navbar-brand text-white" id="logo"><strong>Kids Learn</strong></a>
-            <!-- Menu Bar -->
-            <button class="navbar-toggler navbar-dark" type="button"
-                    data-toggle="collapse" data-target="#myTogglerNav"
-                    aria-controls="myTogglerNav"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="{{@BASE}}">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="{{@BASE}}" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Learn!
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="shapes">Learn Shapes</a>
-                            <a class="dropdown-item" href="animals">Learn Animals</a>
-                            <a class="dropdown-item" href="fruits">Learn Fruits</a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="signIn">Sign In</a>
-                    </li>
-                </ul>
-            </div>
-        </div><!-- container -->
-    </nav>
+    <include href="views/navbar.html"></include>
     <div class="container gold p-3"><h1>Create </h1></div>
     <div class="container grey p-5">
         <h2 class="p-3 text-center">Your Creation</h2>
         <hr>
         <div class="row">
             <div class="col-4">
-                <img src="{{ @SESSION.pics }}" class="w-100" alt="{{ @SESSION.name }}">
+                <img src="{{ @SESSION.creation->getImage() }}" class="w-100" alt="{{ @SESSION.creation->getName() }}">
             </div>
             <div class="col-8">
                 <h2>Name: </h2>
-                <p>{{ @SESSION.oname }}</p>
+                <p>{{ @SESSION.creation->getName() }}</p>
                 <h2>Type:</h2>
 
-                <p>{{ @SESSION.type }}</p>
+                <p>{{ @SESSION.creation->getObject() }}</p>
                 <h2>Description:</h2>
 
-                <p>{{ @SESSION.desc }}</p>
+                <p>{{ @SESSION.creation->getDesc() }}</p>
             </div>
         </div>
         <div class="d-flex justify-content-center m-2 p-2 mx-auto">
             <a href="{{@BASE}}" class="d-inline btn blue btn-large w-25 p-2 mx-auto ">Go Back Home</a>
-            <a href="create" class="d-inline blue btn w-25 btn-large p-2 mx-auto ">All Creations!</a>
+            <a href="creations" class="d-inline blue btn w-25 btn-large p-2 mx-auto ">All Creations!</a>
         </div>
     </div>
 
