--- a/views/creations.html
+++ b/views/creations.html
@@ -1,51 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500;700&display=swap" rel="stylesheet">    <link rel="stylesheet" href="styles/style.css">
-
     <title>Kid's Learn!!</title>
 
 </head>
 <body>
 <div class="container text-white">
-    <!-- Navigation bar -->
     <include href="views/navbar.html"></include>
-    <div class="container p-3 bg-danger"><h1>Learn about Fruits! </h1></div>
-    <div class="container p-4">
-        <div class="container" id="showFruits">
-            <!-- Use Repeat tag and get info from database-->
+    <div class="d-flex justify-content-around bg-success p-4">
+        <a href="account">Account</a>
+        <a href="creations">Creation</a>
+    </div>
 
-            <div class="row" >
-                <div class="col-4  col-sm-5 ">
-                    <div id="target"></div>
+    <div>
+        <!-- Use Repeat tag and get info from database-->
+        <repeat group="{{ @creations }}" value="{{ @create }}">
+            <div class="row p-3">
+                <div class="col-3 col-sm-5 ">
+                    <img src="{{ @create['image'] }}" alt="{{ @create['name'] }}">
                 </div>
-                <div class="col-8 col-sm-7">
-
-                    <span id="result"></span>
-
+                <div class="col-9 col-sm-7">
+                    <h2>{{ @create['name'] }}</h2>
+                    <h5>Type: <br>{{ @create['object'] }}</h5>
+                    <h5>Description: <br> {{ @create['description'] }}</h5>
                 </div>
             </div>
-        </div>
+        </repeat>
+
     </div>
 
-    <div class="d-flex justify-content-center m-2 p-2 mx-auto">
-        <a href="{{@BASE}}" class="d-inline btn blue btn-large w-25 p-2 mx-auto ">Go Back Home</a>
-    </div>
 </div>
-<br><br>
-<div class="justify-content-center align-self-center text-center d-flex">
-    <br>
-    <h6>@Sezyl</h6>
-</div>
-<br>
-
-<script src="//code.jquery.com/jquery.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-<script src="scripts/displayFruits.js"></script>
+
 </body>
 </html>
