--- a/views/navbar.html
+++ b/views/navbar.html
@@ -24,10 +24,21 @@
                         <a class="dropdown-item" href="fruits">Learn Fruits</a>
                     </div>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="signIn">Sign In</a>
-                    <a href="logout">Logout</a>
-                </li>
+                <check if="{{ isset(@SESSION.un) }}">
+                    <true>
+                        <li class="nav-item">
+                            <a href="account" class="nav-link">Hello, {{ @SESSION.un->getUsername() }}</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="logout" class="nav-link">Logout</a>
+                        </li>
+                    </true>
+                    <false>
+                        <li class="nav-item">
+                            <a class="nav-link" href="signIn">Sign In</a>
+                        </li>
+                    </false>
+                </check>
             </ul>
         </div>
     </div><!-- container -->
