--- a/views/shapes.html
+++ b/views/shapes.html
@@ -12,39 +12,7 @@
 <body>
 <div class="container text-white">
     <!-- Navigation bar -->
-    <nav class="navbar navbar-expand-sm" >
-        <div class="container">
-            <!-- logo -->
-            <a href="{{ @BASE }}" class="navbar-brand text-white" id="logo"><strong>Kids Learn</strong></a>
-            <!-- Menu Bar -->
-            <button class="navbar-toggler navbar-dark" type="button"
-                    data-toggle="collapse" data-target="#myTogglerNav"
-                    aria-controls="myTogglerNav"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="{{@BASE}}">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="{{@BASE}}" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Learn!
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="shapes">Learn Shapes</a>
-                            <a class="dropdown-item" href="animals">Learn Animals</a>
-                            <a class="dropdown-item" href="fruits">Learn Fruits</a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="signIn">Sign In</a>
-                    </li>
-                </ul>
-            </div>
-        </div><!-- container -->
-    </nav>
+    <include href="views/navbar.html"></include>
     <div class="container bg-warning p-3"><h1>Learn about Shapes! </h1></div>
     <div class="container p-4">
         <div class="container" id="showShapes">
