added comments for everyfiles

--- a/views/animals.html
+++ b/views/animals.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<!--
+ * Blezyl Santos and Sarah Mehri
+ * Kids Learn Website - animal.html
+ * Version 1.0
+ * Display the json file of animals with image and descriptions
+ *
+-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
