--- a/views/create.html
+++ b/views/create.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<!--
+ * Blezyl Santos and Sarah Mehri
+ * Kids Learn Website
+ * Version 1.0
+ * Display the canvas to draw anything, and download it
+ *
+-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
