--- a/views/create1.html
+++ b/views/create1.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<!--
+ * Blezyl Santos and Sarah Mehri
+ * Kids Learn Website - create1.html
+ * Version 1.0
+ * Display the form of creation, name, description and type of drawing
+ *
+-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
