--- a/views/createFinish.html
+++ b/views/createFinish.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<!--
+ * Blezyl Santos and Sarah Mehri
+ * Kids Learn Website - createFinish.html
+ * Version 1.0
+ * Display the summary of creation, name, type and desc
+ *
+-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
