--- a/views/forgot.html
+++ b/views/forgot.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<!--
+ * Blezyl Santos and Sarah Mehri
+ * Kids Learn Website - forgot.html
+ * Version 1.0
+ * Display the form for changing the password
+ *
+-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
