--- a/views/fruits.html
+++ b/views/fruits.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<!--
+ * Blezyl Santos and Sarah Mehri
+ * Kids Learn Website - fruits.html
+ * Version 1.0
+ * Display the fruits information
+ *
+-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
