--- a/views/signUp.html
+++ b/views/signUp.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<!--
+ * Blezyl Santos and Sarah Mehri
+ * Kids Learn Website - signUp.html
+ * Version 1.0
+ * Display the Sign up form
+ *
+-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
