--- a/views/signUpPro.html
+++ b/views/signUpPro.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<!--
+ * Blezyl Santos and Sarah Mehri
+ * Kids Learn Website - signUpPro.html
+ * Version 1.0
+ * Display the Sign up pro user form
+ *
+-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
