--- a/views/shapes.html
+++ b/views/shapes.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<!--
+ * Blezyl Santos and Sarah Mehri
+ * Kids Learn Website - shapes.html
+ * Version 1.0
+ * Display the shapes information
+ *
+-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
