--- a/views/signIn.html
+++ b/views/signIn.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<!--
+ * Blezyl Santos and Sarah Mehri
+ * Kids Learn Website - signIn.html
+ * Version 1.0
+ * Display the Sign in form
+ *
+-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
